tests/semantic/assign_err5.expected

Semantic Error [line 7]: value: "test"
	Invalid l-value type: Expected type(s) 'Variable'; found 'Constant' instead.
