tests/semantic/assign_err5.mtp
(*Try an assignment to a constant int*)
const test := 3;
var a, b : integer;

begin

	test := a + b
end.